# web-app-bot

./: .env  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  webappbot.py
